[package]
name = "qemuserver"
version = "0.1.0"
authors = ["nmbr7 <suhailr7@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
